prevent controls from losing visibility

--- a/src/styles/components/SectionTitle.module.scss
+++ b/src/styles/components/SectionTitle.module.scss
@@ -8,6 +8,10 @@
         @include header-medium;
         padding-left: var(--gap);
         margin-right: 1rem;
+
+        &.notVisible {
+            opacity: 0.3;
+        }
     }
 
     form {
